tests/Code/ExprTest1.xx

// Expression Test 1
// 06/03/2015

class Vector2 {
	float x,y
}

class Vector3 : Vector2 {
	
	init(float xx, float yy, float zz) {
		super.x := xx
		y := yy
		this.z := this.x
	}
	
	float z
	
}

class Foo {}
class FooSub : Foo {}
class Bar {}

class ExprTest1 {
	
	init() {
		
		// Expressions for initialization
		int a := (int)test1(2.2)
		int b := test1(0)
		int c := m_c[2][test1(5)]
		int d := a + -3 // ok, unary expression is valid
		//int e := a + ---3 // error: "--" is scanned here
		int e := a + - - -3 // ok, unary expression is valid
		
		//var f := a
		//var g := m_d
		
		// Expressions for conditions
		if (a > m_b[0]) = true {
			int n
			for int i := 0 ; i < 10 ; i++ {
				n += i + test1((int)(a > b))
			}
		} else if m_c[1][2] - m_b[-3] > 0 {
			Foo f
			FooSub fs
			Bar b
			
			//f := b // error: "Bar" is not a sub class of "Foo"
			f := fs // ok, "FooSub" is a sub class of "Foo"
			f := null // ok, null is compatible to all pointers
			fs := (FooSub)f // ok, dynamic cast
			
			//bool b0 := (f = b) // error: "Bar" is not sub class of "Foo"
			bool b1 := (f = fs) // ok
		}
		
	}
	
	float test1(float x) {
		return x*x
	}
	
	int test1(int x) {
		return x*x
	}
	
	int m_a := 2 + 3/2
	int[] m_b := { 1, 2, 3 }
	int[][] m_c := { { 3 }, { 2 } }
	Bar[] m_d
	
	static void main() {
		ExprTest1 instance := new ExprTest1()
	}
	
}
